# pipchix

./: .dir-locals.el  .hgignore  COPYING  Makefile.am  Makefile.in  README.adoc  ac-chez-scheme.m4  ac-chibi-scheme.m4  ac-chicken-install-options.m4  ac-chicken-scheme.m4  ac-gambit-scheme.m4  ac-gauche-scheme.m4  ac-gerbil-scheme.m4  ac-guile-scheme.m4  ac-loko-scheme.m4  ac-mit-scheme.m4  ac-mosh-scheme.m4  ac-r6rs-install-options.m4  ac-r7rs-install-options.m4  ac-racket.m4  ac-sagittarius-scheme.m4  ac-tinyscheme.m4  ac-what-was-found.m4  aclocal.m4  configure  configure.ac  is-older.c  pipchix-tests.am  return77.c  tests-preparations.am
pipchix/: abstract-syntax-tree.exports.m4  abstract-syntax-tree.m4  abstract-syntax-tree.sld  abstract-syntax-tree.sld.m4  base.exports.m4  base.m4  base.sld  base.sld.m4  ck.scm  continuation-capture.exports.m4  continuation-capture.m4  define-record-factory-ermactrans.m4  define-record-factory.exports.m4  define-record-factory.m4  define-record-interface.exports.m4  define-record-interface.m4  em-syntax-rules.exports.m4  em-syntax-rules.m4  essentials.exports.m4  essentials.m4  expressions.exports.m4  expressions.m4  generate-identifier.exports.m4  generate-identifier.m4  macros.exports.m4  macros.m4  nix-embed.exports.m4  nix-embed.m4  nix-embed.sld  nix-embed.sld.m4  nix-letrec.exports.m4  nix-letrec.m4  nix-list.exports.m4  nix-list.m4  nix-list.sld.m4  nix-set.exports.m4  nix-set.m4  pipchix-includes.m4  string-manipulation.exports.m4  string-manipulation.m4
pipchix/general-purpose/: backtracking.exports.m4  backtracking.m4  base64.exports.m4  base64.m4  charset.exports.m4  ck.exports.m4  ck.m4  combinators.exports.m4  combinators.m4  comparator.exports.m4  continuation-capture.exports.m4  continuation-capture.m4  define-record-factory.m4  division.exports.m4  division.m4  e-macros-environment.exports.m4  e-macros-environment.m4  e-macros.exports.m4  e-macros.m4  eager-macros.exports.m4  eager-macros.m4  eager-syntax-rules.exports.m4  eager-syntax-rules.m4  eager-syntax.exports.m4  eager-syntax.m4  ec.exports.m4  ec.m4  em-syntax-rules.exports.m4  em-syntax-rules.m4  em.m4  error-reporting.exports.m4  goal-directed.exports.m4  goal-directed.m4  inversion-list.exports.m4  inversion-list.m4  list.exports.m4  list.m4  mapping.exports.m4  match.exports.m4  match.m4  (+4 more)
pipchix/general-purpose/charset/: srfi-14.scm
pipchix/general-purpose/comparator/: 128.body1.scm
pipchix/general-purpose/ec/: goal-directed.exports.m4  goal-directed.m4  stream.exports.m4  stream.m4  streams.exports.m4  streams.m4
pipchix/general-purpose/mapping/: hash.exports.m4
pipchix/general-purpose/stream/: derived.m4
pipchix/general-purpose/streams/: derived.exports.m4  derived.m4  primitive.exports.m4  primitive.m4
pipchix/macros/: nix-lambda.exports.m4  nix-lambda.m4  nix-letrec.exports.m4
r6rs/pipchix/: abstract-syntax-tree.sls.m4  base.sls.m4  box.sls.m4  continuation-capture.sls.m4  define-record-factory.sls.m4  define-record-interface.sls.m4  em-syntax-rules.sls.m4  essentials.sls.m4  expressions.sls.m4  generate-identifier.sls.m4  if-match-ellipsis.sls.m4  if-syntax-match-ellipsis.sls.m4  macros.sls.m4  nix-embed.sls.m4  nix-letrec.sls.m4  nix-list.sls.m4  nix-set.sls.m4  srfi-111.sls.m4  srfi-39.sls.m4  srfi-9.sls.m4  string-manipulation.sls.m4
r6rs/pipchix/general-purpose/: backtracking.sls.m4  base64.sls.m4  box.sls.m4  charset.sls.m4  ck.sls.m4  combinators.sls.m4  comparator.sls.m4  continuation-capture.sls.m4  cut.sls.m4  define-record-factory.sls.m4  division.sls.m4  e-macros-environment.sls.m4  e-macros.sls.m4  eager-macros.sls.m4  eager-syntax-rules.sls.m4  eager-syntax.sls.m4  ec.sls.m4  em-syntax-rules.sls.m4  em.sls.m4  error-reporting.sls.m4  gensym.sls.m4  goal-directed.sls.m4  identifiers-syntax.sls.m4  inversion-list.sls.m4  list.sls.m4  mapping.sls.m4  match.sls.m4  srfi-39.sls.m4  stream.sls.m4  streams.sls.m4  syntax.sls.m4
r6rs/pipchix/macros/: nix-lambda.sls.m4  nix-letrec.sls.m4  nix-set.sls.m4
r7rs/pipchix/: abstract-syntax-tree.sld.m4  base.sld.m4  box.sld.m4  continuation-capture.sld.m4  define-record-factory.sld.m4  define-record-interface.sld.m4  em-syntax-rules.sld.m4  essentials.sld.m4  expressions.sld.m4  generate-identifier.sld.m4  if-match-ellipsis.sld.m4  if-syntax-match-ellipsis.sld.m4  macros.sld.m4  nix-embed.sld.m4  nix-letrec.sld.m4  nix-list.sld.m4  nix-set.sld.m4  srfi-111.sld.m4  string-manipulation.sld.m4
r7rs/pipchix/gambit/: base.scm.m4  define-record-factory.scm.m4  nix-letrec.scm.m4  nix-set.scm.m4
r7rs/pipchix/general-purpose/: backtracking.sld.m4  base64.sld.m4  box.sld.m4  charset.sld.m4  ck.sld.m4  combinators.sld.m4  comparator.sld.m4  continuation-capture.sld.m4  cut.sld.m4  define-record-factory.sld.m4  division.sld.m4  e-macros-environment.sld.m4  e-macros.sld.m4  eager-macros.sld.m4  eager-syntax-rules.sld.m4  eager-syntax.sld.m4  ec.sld.m4  em-syntax-rules.sld.m4  em.sld.m4  error-reporting.sld.m4  (+10 more)
srfi/: 148.sld
srfi/148/: test.sld
tests/: .dir-locals.el  Makefile.am  Makefile.in  ast-nodes-preds-template.at  atlocal.in  backtracking-template.at  base64-template.at  base64-utf8-template.at  charset-template.at  check-abstract-syntax-tree.scm  check-nix-embed.scm  check-nix-list.scm  check-nix-set.scm  ck-template.at  combinators-template.at  comparator-template.at  continuation-capture-template.at  division-template.at  e-macros-template.at  eager-macros-template.at  ec-template.at  em-syntax-rules-template.at  em-template.at  escaped-template.at  escaped-utf8-template.at  expressions-template.at  goal-directed-template.at  list-template.at  macros-template.at  match-template.at  nix-attributebinding-node-template.at  nix-attributepath-node-template.at  nix-attributeset-node-template.at  nix-data-node-template.at  nix-embed-template.at  nix-embedded-node-template.at  nix-inherit-node-template.at  nix-lambda-node-template.at  nix-letrec-node-template.at  nix-letrec-template.at  (+36 more)
tests/r6rs/: check-nix-list
tests/r7rs/: check-nix-list
tinyscheme-1.42/: Makefile.am  Makefile.in
(+19 files in other folders)
